corrected output case for section-header-align

--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -30,7 +30,7 @@ a {
 }
 
 .section-header {
-    --section-header-align: horizontal;
+    text-align: var(--section-header-align) ;
 }
 
 .section-tagline {
@@ -56,8 +56,5 @@ a {
     --line-height-small: 1.2;
     --line-height-base: 1.5;
     --line-height-big: 1.8;
-}
-
-.section-header-align {
-    align-content: center;
+    --section-header-align: center;
 }
